[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/3D/Character/CharacterMovement.gd" type="Script" id=1]

[node name="CharacterMovement" type="Tween"]
playback_process_mode = 0
script = ExtResource( 1 )

[connection signal="tween_completed" from="." to="." method="_on_CharacterMovement_tween_completed"]
[connection signal="tween_step" from="." to="." method="_on_CharacterMovement_tween_step"]
